Default to EGL instead of GLX with Ozone X11.

There is a bug destroying one of the XWindows created for the
VSyncProvider. When that bug is fixed the default should be GLX again.

BUG=646982

Review-Url: https://codereview.chromium.org/2339413002
Cr-Commit-Position: refs/heads/master@{#418879}

Former-commit-id: 91c50202bdc063ddb898c62c84eb183fbb317759